# Kore

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html  website-playground.html
docs/plans/: 2026-02-26-ai-first-website-design.md  2026-02-26-graph-filter-design.md
src/: App.tsx  main.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  error.rs  kube_state.rs  main.rs
src-tauri/src/state/: ai.rs  crd.rs  dashboard.rs  debug.rs  event_store.rs  exec.rs  graph.rs  helm.rs  logs.rs  metrics.rs  mod.rs  multi_cluster.rs  multi_logs.rs  network_policy.rs  port_forward.rs  rbac.rs  resources.rs  rollback.rs  update.rs  watcher.rs  yaml.rs
src/components/: ai-chat-view.tsx  ai-config-warning.tsx  ai-panel.tsx  ai-settings.tsx  chat-message-bubble.tsx  cluster-dashboard.tsx  command-palette.tsx  confirm-dialog.tsx  crd-browser.tsx  debug-container-modal.tsx  deployment-details-view.tsx  deployment-rollback.tsx  diff-viewer.tsx  error-boundary.tsx  events-timeline.tsx  exec-terminal.tsx  helm-detail-view.tsx  helm-releases.tsx  label-filter-bar.tsx  log-panel.tsx  multi-pod-logs.tsx  network-policy-view.tsx  pinned-resources.tsx  pod-details-view.tsx  pod-metrics.tsx  port-forwarding.tsx  rbac-forbidden-banner.tsx  rbac-identity-picker.tsx  rbac-impersonation-banner.tsx  rbac-matrix.tsx  rbac-reverse-lookup.tsx  rbac-rule-chain.tsx  rbac-view.tsx  resource-details-view.tsx  resource-graph.tsx  resource-table.tsx  restart-sparkline.tsx  searchable-dropdown.tsx  settings.tsx  shortcut-overlay.tsx  (+3 more)
src/hooks/: use-ai-config.ts  use-k8s-context.ts  use-keyboard-shortcuts.ts  use-network-policy-graph.ts  use-pinned-resources.ts  use-rbac.ts  use-resource-watch.ts  use-restart-history.ts  use-update-check.ts
src/lib/: api.ts  diff.ts  errors.ts  graph-layout.ts  k8s-utils.ts  transforms.ts  types.ts
src/lib/__tests__/: diff.test.ts  errors.test.ts  graph-layout.test.ts  k8s-utils.test.ts  transforms-extended.test.ts  transforms.test.ts  utils.test.ts
