[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "process"] }
kube = { version = "0.91.0", default-features = false, features = [
  "client",
  "config",
  "derive",
  "runtime",
  "rustls-tls"
] }
kube-runtime = "0.91.0"
futures = "0.3"
anyhow = "1.0"


