[package]
name = "kore"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
kube = { workspace = true }
kube-runtime = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

